wild. forgot to commit?

--- a/index.html
+++ b/index.html
@@ -4,12 +4,16 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>SkyMochi64 Links / SkyMochi256 Links / YouTube, Twitch, Twitter, TikTok, OnlyFans, Reddit, Discord</title>
+  <title>SkyMochi64 YouTube, Twitch, Twitter, TikTok, OnlyFans, Reddit, Discord</title>
+  <link rel="icon" type="image/x-icon" href="/assets/Skye Kychenthal Cherry Blossoms PDX.jpg">
   <meta name="description"
-    content="Skye's links to OnlyFans, TikTok, Twitter, Twitch, YouTube, Discord, Reddit | For the content creator Skye Kychenthal, also known by SkyMochi64, SkyMochi256, and SkyMocha!">
-  <meta name="author" content="skye kychenthal">
-  <meta name="tags" content="content creator, skymochi64, skymochi256, skye kychenthal">
+    content="SkyMochi64 links and SkyMochi256 links to OnlyFans, TikTok, Tumblr, Twitch, YouTube, Discord, Reddit! For the content creator Skye Kychenthal, aka SkyMochi64 or SkyMochi256.">
+  <meta name="author" content="SkyMochi64">
+  <meta name="tags" content="skymochi64, skymochi256, skye kychenthal">
   <link rel="stylesheet" href="style.css">
+
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10"></script>
 
   <meta property="og:title" content="SkyMochi64 / SkyMochi256 Links" />
   <meta property="og:color" content="#F5A9B8" />
@@ -19,75 +23,96 @@
 
 <body>
   <div class="container">
-    <div class="profile">
-      <img src="assets/haj_christmas.jpg" alt="SkyMochi64">
-      <h1>SkyMochi64 / SkyMochi256</h1>
-    </div>
-    <div class="gallery">
-      <div class="photo">
-        <img src="assets/cool_makeup.jpg" alt="SkyMochi256 Makaup">
-      </div>
-      <div class="photo">
-        <img src="assets/Skye Kychenthal Cherry Blossoms PDX.jpg" alt="Skye Kychenthal Cherry Blossoms PDX">
-      </div>
-      <div class="photo">
-        <img src="assets/haj_love.jpg" alt="SkyMocha Blahaj">
-      </div>
-      <div class="photo">
-        <img src="assets/umbrella_photo.jpeg" alt="Skye Kychenthal professional photo in the rain">
-      </div>
-    </div>
-    <h3>Skye &nbsp;~&nbsp; She/They &nbsp;~&nbsp; 19 &nbsp;~&nbsp; Queer & Non-binary</h3>
 
-    <div class="kofi-container">
-      <hr>
-      <script type='text/javascript' src='https://storage.ko-fi.com/cdn/widget/Widget_2.js'></script>
-      <script
-        type='text/javascript'>kofiwidget2.init('sfw photos / Tips', '#29abe0', 'D1D5FBU2H'); kofiwidget2.draw();</script>
-      <hr>
+    <div class="profile-container">
+
+      <div class="profile">
+        <img src="assets/Skye Kychenthal Cherry Blossoms PDX.jpg" alt="SkyMochi64">
+        <h1>SkyMochi64 / SkyMochi256</h1>
+      </div>
+
     </div>
+
+    <hr>
 
     <div class="buttons-container">
-      <a href="https://www.youtube.com/@skymochi64" class="button">
-        <i class="fab fa-twitter"></i>
-        <span>YouTube</span>
+      <a href="https://www.youtube.com/@skymochi64?sub_confirmation=1" class="button">
+        YouTube
+      </a>
+      <a href="https://www.youtube.com/@skymochi-live?sub_confirmation=1" class="button">
+        2nd YouTube
       </a>
       <a href="https://www.tiktok.com/@skymochi64" class="button">
-        <i class="fab fa-instagram"></i>
-        <span>TikTok</span>
-      </a>
-      <a href="https://www.twitter.com/skymochi64" class="button">
-        <i class="fab fa-facebook"></i>
-        <span>Twitter</span>
+        TikTok
       </a>
       <a href="https://www.twitch.tv/skymochi64" class="button">
-        <i class="fab fa-youtube"></i>
-        <span>Twitch</span>
+        Twitch
+      </a>
+      <a href="https://skymochi.social/@skye" class="button">
+        Fedi
       </a>
       <a href="https://discord.gg/T6BsDe9YX6" class="button">
-        <!-- <i class="fab fa-snapchat"></i> -->
-        <span>Discord</span>
+        Discord
       </a>
     </div>
+    <noscript>
+      <p style="text-align: center;">Please enable JS to see pornographic links</p> 
+    </noscript>
     <div class="buttons-container">
-      <a href="https://www.twitter.com/skymochi256" class="button nsfw-button">
-        <span>18+ Twitter</span>
+      <!-- <a id="https://www.reddit.com/u/skymochi256" class="button nsfw-button">
+        NSFW Reddit
+      </a> -->
+      <a id="https://www.instagram.com/skymochi256" class="button nsfw-button">
+        NSFW IG
       </a>
-      <a href="https://www.reddit.com/user/skymochi256" class="button nsfw-button">
-        <span>18+ Reddit</span>
+      <!-- <a id="https://skymochi256.manyvids.com" class="button nsfw-button">
+        ManyVids
+      </a> -->
+      <a id="https://www.fansly.com/skymochi256" class="button nsfw-button">
+        Fansly
       </a>
-      <a href="https://www.onlyfans.com/skymochi256" class="button nsfw-button">
-        <span>18+ OnlyFans</span>
-      </a>
-      <a href="https://www.onlyfans.com/skymochi256_free" class="button nsfw-button">
-        <span>18+ Free OnlyFans</span>
+      <a id="https://www.onlyfans.com/skymochi256" class="button nsfw-button">
+        OnlyFans
       </a>
     </div>
+    <!-- </noscript> -->
     <hr class="hide">
     <footer>
       <p>contact@skymocha.net</p>
     </footer>
   </div>
 </body>
+
+
+<script type="text/javascript">
+  
+    $('.nsfw-button').on('click', function (elem) {
+
+      Swal.fire({
+        title: '18+ ONLY',
+        text: "This site contains pornographic images",
+        icon: 'warning',
+        showCancelButton: true,
+        confirmButtonColor: '#3085d6',
+        cancelButtonColor: '#d33',
+        color: 'rgba(255,255,255,255)',
+        iconColor: 'rgba(255,255,255,255)',
+        background: 'rgba(28,30, 30,255)',
+        confirmButtonText: 'I am over 18'
+      })
+      .then( function (result) {
+        
+        if (result.isConfirmed) {
+          
+          window.location = elem.target.id;
+
+        }
+
+      })
+
+    });
+
+
+</script>
 
 </html>
