Changed PFP, changed IG link

--- a/index.html
+++ b/index.html
@@ -4,20 +4,20 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>SkyMochi64 YouTube, Twitch, Twitter, TikTok, OnlyFans, Reddit, Discord</title>
-  <link rel="icon" type="image/x-icon" href="/assets/Skye Kychenthal Cherry Blossoms PDX.jpg">
+  <title>SkyMochi64</title>
+  <link rel="icon" type="image/x-icon" href="/assets/Joshie-Comm-CROP.jpg">
   <meta name="description"
-    content="SkyMochi64 links and SkyMochi256 links to OnlyFans, TikTok, Tumblr, Twitch, YouTube, Discord, Reddit! For the content creator Skye Kychenthal, aka SkyMochi64 or SkyMochi256.">
+    content="SkyMochi64 links to OnlyFans, TikTok, Tumblr, Twitch, YouTube, Discord, Reddit! For the content creator Skye Kychenthal, aka SkyMochi64 or SkyMochi256.">
   <meta name="author" content="SkyMochi64">
-  <meta name="tags" content="skymochi64, skymochi256, skye kychenthal">
+  <meta name="tags" content="skymochi64, skymochi256, Skye Kychenthal">
   <link rel="stylesheet" href="style.css">
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10"></script>
 
-  <meta property="og:title" content="SkyMochi64 / SkyMochi256 Links" />
+  <meta property="og:title" content="SkyMochi64 Links" />
   <meta property="og:color" content="#F5A9B8" />
-  <meta property="og:image" content="assets/haj_christmas.jpg" />
+  <meta property="og:image" content="/assets/Joshie-Comm-CROP.jpg" />
 
 </head>
 
@@ -27,7 +27,7 @@
     <div class="profile-container">
 
       <div class="profile">
-        <img src="assets/Skye Kychenthal Cherry Blossoms PDX.jpg" alt="SkyMochi64">
+        <img src="assets/Joshie-Comm-CROP.jpg" alt="SkyMochi64">
         <h1>SkyMochi64 / SkyMochi256</h1>
       </div>
 
@@ -37,10 +37,10 @@
 
     <div class="buttons-container">
       <a href="https://www.youtube.com/@skymochi64?sub_confirmation=1" class="button">
-        YouTube
+        Main YT
       </a>
       <a href="https://www.youtube.com/@skymochi-live?sub_confirmation=1" class="button">
-        2nd YouTube
+        Clips YT
       </a>
       <a href="https://www.tiktok.com/@skymochi64" class="button">
         TikTok
@@ -48,8 +48,8 @@
       <a href="https://www.twitch.tv/skymochi64" class="button">
         Twitch
       </a>
-      <a href="https://skymochi.social/@skye" class="button">
-        Fedi
+      <a href="https://www.instagram.com/skymochi64" class="button">
+        Insta
       </a>
       <a href="https://discord.gg/T6BsDe9YX6" class="button">
         Discord
@@ -59,15 +59,9 @@
       <p style="text-align: center;">Please enable JS to see pornographic links</p> 
     </noscript>
     <div class="buttons-container">
-      <!-- <a id="https://www.reddit.com/u/skymochi256" class="button nsfw-button">
-        NSFW Reddit
-      </a> -->
       <a id="https://www.instagram.com/skymochi256" class="button nsfw-button">
         NSFW IG
       </a>
-      <!-- <a id="https://skymochi256.manyvids.com" class="button nsfw-button">
-        ManyVids
-      </a> -->
       <a id="https://www.fansly.com/skymochi256" class="button nsfw-button">
         Fansly
       </a>
