--- a/index.html
+++ b/index.html
@@ -5,17 +5,18 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>SkyMochi64</title>
-  <link rel="icon" type="image/x-icon" href="/assets/Joshie-Comm-CROP.jpg">
+  <link rel="icon" type="image/x-icon" href="/assets/Joshie-Comm-CROP-ICO.png">
   <meta name="description"
-    content="SkyMochi64 links to OnlyFans, TikTok, Tumblr, Twitch, YouTube, Discord, Reddit! For the content creator Skye Kychenthal, aka SkyMochi64 or SkyMochi256.">
+    content="SkyMochi64 community links for YouTube, TikTok, Twitch, Discord, and more!">
   <meta name="author" content="SkyMochi64">
-  <meta name="tags" content="skymochi64, skymochi256, Skye Kychenthal">
+  <meta name="tags" content="skymochi64, skymochi256, skymochi, Skye Kychenthal">
   <link rel="stylesheet" href="style.css">
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10"></script>
 
   <meta property="og:title" content="SkyMochi64 Links" />
+  <meta property="og:description" content="YouTube, TikTok, Twitch, Discord, and NSFW links for the creator SkyMochi64 or Skye Kychenthal" />
   <meta property="og:color" content="#F5A9B8" />
   <meta property="og:image" content="/assets/Joshie-Comm-CROP.jpg" />
 
