--- a/index.html
+++ b/index.html
@@ -4,19 +4,19 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>SkyMochi64</title>
+  <title>SkyeActsOut</title>
   <link rel="icon" type="image/x-icon" href="/assets/Joshie-Comm-CROP-ICO.png">
   <meta name="description"
-    content="SkyMochi64 community links for YouTube, TikTok, Twitch, Discord, and more!">
-  <meta name="author" content="SkyMochi64">
-  <meta name="tags" content="skymochi64, skymochi256, skymochi, Skye Kychenthal">
+    content="SkyeActsOut, also known as Skye Kychenthal, is fandom video essayist focusing on radicalization and empowerment.">
+  <meta name="author" content="SkyeActsOut">
+  <meta name="tags" content="skymochi64, skymocha, skyeactsouts, Skye Kychenthal">
   <link rel="stylesheet" href="style.css">
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10"></script>
 
-  <meta property="og:title" content="SkyMochi64 Links" />
-  <meta property="og:description" content="YouTube, TikTok, Twitch, Discord, and NSFW links for the creator SkyMochi64 or Skye Kychenthal" />
+  <meta property="og:title" content="SkyeActsOut Links" />
+  <meta property="og:description" content="YouTube, TikTok, Twitch, & Discord for the creator SkyeActsOut." />
   <meta property="og:color" content="#F5A9B8" />
   <meta property="og:image" content="/assets/Joshie-Comm-CROP.jpg" />
 
@@ -29,7 +29,7 @@
 
       <div class="profile">
         <img src="assets/Joshie-Comm-CROP.jpg" alt="SkyMochi64">
-        <h1>SkyMochi64 / SkyMochi256</h1>
+        <h1>SkyeActsOut</h1>
       </div>
 
     </div>
@@ -37,20 +37,20 @@
     <hr>
 
     <div class="buttons-container">
-      <a href="https://www.youtube.com/@skymochi64?sub_confirmation=1" class="button">
+      <a href="https://www.youtube.com/@skyeactsout?sub_confirmation=1" class="button">
         Main YT
       </a>
-      <a href="https://www.youtube.com/@skymochi-live?sub_confirmation=1" class="button">
+      <a href="https://www.youtube.com/@skyeactsoutlive?sub_confirmation=1" class="button">
         Clips YT
       </a>
-      <a href="https://www.tiktok.com/@skymochi64" class="button">
+      <a href="https://www.tiktok.com/@skyeactsout" class="button">
         TikTok
       </a>
-      <a href="https://www.twitch.tv/skymochi64" class="button">
+      <a href="https://www.twitch.tv/skyeactsout" class="button">
         Twitch
       </a>
-      <a href="https://www.instagram.com/skymochi64" class="button">
-        Insta
+      <a href="https://www.instagram.com/skyeactsout/" rel="me" class="button">
+        IG
       </a>
       <a href="https://discord.gg/T6BsDe9YX6" class="button">
         Discord
@@ -60,20 +60,20 @@
       <p style="text-align: center;">Please enable JS to see pornographic links</p> 
     </noscript>
     <div class="buttons-container">
-      <a id="https://www.instagram.com/skymochi256" class="button nsfw-button">
-        NSFW IG
+      <a id="https://www.twitter.com/skyeforsale" class="button nsfw-button">
+        18+ Twitter
       </a>
-      <a id="https://www.fansly.com/skymochi256" class="button nsfw-button">
-        Fansly
+      <a id="https://www.fansly.com/skyeforsale" class="button nsfw-button">
+        18+ Fansly
       </a>
-      <a id="https://www.onlyfans.com/skymochi256" class="button nsfw-button">
-        OnlyFans
+      <a id="https://www.onlyfans.com/skye.forsale" class="button nsfw-button">
+        18+ OnlyFans
       </a>
     </div>
     <!-- </noscript> -->
-    <hr class="hide">
+    <hr class="hide second">
     <footer>
-      <p>contact@skymocha.net</p>
+      <p>contact@skyeactsout.com</p>
     </footer>
   </div>
 </body>
