Portfolio updated, Color updates, Image refactoring

--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>SkyeActsOut</title>
-  <link rel="icon" type="image/x-icon" href="/assets/Joshie-Comm-CROP-ICO.png">
+  <!-- <link rel="icon" type="image/x-icon" href="/assets/Joshie-Comm-CROP-ICO.png"> -->
   <meta name="description"
     content="SkyeActsOut, also known as Skye Kychenthal, is fandom video essayist focusing on radicalization and empowerment.">
   <meta name="author" content="SkyeActsOut">
-  <meta name="tags" content="skymochi64, skymocha, skyeactsouts, Skye Kychenthal">
+  <meta name="tags" content="skyeactsouts, Skye Kychenthal">
   <link rel="stylesheet" href="style.css">
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
@@ -49,8 +49,8 @@
       <a href="https://www.twitch.tv/skyeactsout" class="button">
         Twitch
       </a>
-      <a href="https://www.instagram.com/skyeactsout/" rel="me" class="button">
-        IG
+      <a href="https://vgen.co/skyeactsout" rel="me" class="button">
+        VGen
       </a>
       <a href="https://discord.gg/T6BsDe9YX6" class="button">
         Discord
@@ -63,10 +63,10 @@
       <a id="https://www.twitter.com/skyeforsale" class="button nsfw-button">
         18+ Twitter
       </a>
-      <a id="https://www.fansly.com/skyeforsale" class="button nsfw-button">
+      <a id="https://fans.ly/skyeforsale/t1" class="button nsfw-button">
         18+ Fansly
       </a>
-      <a id="https://www.onlyfans.com/skye.forsale" class="button nsfw-button">
+      <a id="https://onlyfans.com/skye.forsale/c6" class="button nsfw-button">
         18+ OnlyFans
       </a>
     </div>
