--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Skye Kychenthal</title>
-    <link rel="icon" type="image/x-icon" href="/assets/Joshie-Comm-CROP-ICO.png">
+    <!-- <link rel="icon" type="image/x-icon" href="/assets/Joshie-Comm-CROP-ICO.png"> -->
     <meta name="description" content="Skye Kychenthal's portfolio of work for clients such as @nominal.naomi, @nyannie, & @bubblepinkelle as well as her own.">
 
     <link rel="stylesheet" href="./style.css">
@@ -12,127 +12,98 @@
     <meta property="og:title" content="Skye Kychenthal" />
     <meta property="og:description" content="Skye Kychenthal's portfolio of work for clients such as @nominal.naomi, @nyannie, & @bubblepinkelle as well as her own." />
     <meta property="og:color" content="#F5A9B8" />
-    <meta property="og:image" content="./assets/skye.jpg" />
+    <meta property="og:image" content="./assets/pfps/skye.jpg" />
 
 </head>
 <body>
     <div class="container">
-        <aside class="sidebar">
-            <img src="./assets/skye.jpg" alt="Header Image" class="header-image">
+        <section class="topbar">
+            <img src="./assets//pfps/skye.jpg" alt="Header Image" class="header-image">
             <h1>Skye Kychenthal</h1>
-            <p>contact@skyeactsout</p>
+            <p>contact@skyeactsout.com</p>
+            <div class="socials">
 
-            <section class="experience">
-                <h3>Education</h3>
-                <ul>
-                    <li>Portland State University<span>2024 - Present</span></li>
-                    <li>Reed College<span>2022 - 2023</span></li>
-                    <li>Peddie School<span>2018 - 2022</span></li>
-                </ul>
-            </section>
+                <p><a href="/">socials</a></p>
+                <p><a href="https://vgen.co/skyeactsout/">commissions</a></p>
+                <p><a href="https://www.youtube.com/playlist?list=PLAr8NYOzRYC30OyDuTnrtED2vOvW-yLvw">editing reel</a></p>
+                <p><a href="https://github.com/skyeactsout">github</a></p>
 
-            <section class="experience">
-                <h3>Experience</h3>
-                <ul>
-                    <li>Freelance<br>Video Editor<span>2024 - Present</span></li>
-                    <li>Your Turn To Thrive<br>Developer<span>2023 - Present</span></li>
-                    <li>Peddie School<br>Club Leader & RA<span>2022</span></li>
-                    <li>FRC 5895<br>Electrical Lead<span>2020 - 2021</span></li>
-                    <li>GUII Lab UCSC <br> Lab Intern <span>Summer 2021</span></li>
-                </ul>
-            </section>
-        </aside>
+            </div>
+        <section>
+
+        <hr>
 
         <main class="portfolio">
-            <h2>Portfolio</h2>
             <section class="portfolio-section video">
-                <h3>Video</h3>
-                <!-- <p>Video editing for creators reaching ~500K followers</p> -->
+                <h3>Who Have I Worked With?</h3>
                 <div class="gallery">
-                    <div> 
-                        <a href="https://www.youtube.com/watch?v=RtOjBK13tO0">
-                            <img src="https://img.youtube.com/vi/RtOjBK13tO0/maxresdefault.jpg" alt="Video Project 1">
-                            <p>"What you should do in your 1st year of transitioning"</p>
-                            <p>@bubblepinkelle [25:14]</p>
-                        </a>
-                    </div>
+
                     <div>
-                        <a href="https://youtu.be/Fa-6l2AT3Bk"> 
-                            <img src="https://img.youtube.com/vi/Fa-6l2AT3Bk/maxresdefault.jpg" alt="Video Project 1">
-                            <p>"This is Not Sustainable"</p>
-                            <p>@skyeactsout [6:23]</p>
-                        </a>
-                    </div>
-                    <div> 
-                        <a href="https://www.youtube.com/watch?v=xRJ8MSB8jBs">
-                            <img src="https://img.youtube.com/vi/xRJ8MSB8jBs/maxresdefault.jpg" alt="Video Project 1">
-                            <p>"Red-Pilled Detransitioner Tries Debunking ME??"</p>
-                            <p>@nominal.naomi [25:47]</p>
-                        </a>
-                    </div>
-                    <div> 
-                        <a href="https://youtube.com/shorts/BccMPwR5Gfw">
-                            <img src="./assets/skyeTTthumb.jpg" alt="Video Project 1">
-                            <p>@skyeactsout TikTok</p>
-                        </a>
-                    </div>
-                    <div> 
-                        <a href="https://www.youtube.com/shorts/0UrFI-nr65w">
-                            <img src="./assets/nyanniethumb.png" alt="Video Project 1">
-                            <p>@nyannie TikTok</p>
+                        <a href="https://www.youtube.com/@nominalnaomi">
+                            <img src="./assets/pfps/naomi.jpeg">
+                            <p>🔞 nominal.naomi 🔞</p>
                         </a>
                     </div>
                     
+                    <div>
+                        <a href="https://www.youtube.com/@bubblepinkelle">
+                            <img src="./assets/pfps/elle.jpg">
+                            <p>🔞 BubblePinkElle 🔞</p>
+                        </a>
+                    </div>
+
+                    <div>
+                        <a href="https://www.youtube.com/@nyanniee">
+                            <img src="./assets/pfps/annie.jpg">
+                            <p>🔞 Nyannie 🔞</p>
+                        </a>
+                    </div>
+
+                    <div>
+                        <a href="https://www.youtube.com/@winteristired">
+                            <img src="./assets/pfps/winter.jpeg">
+                            <p>winteris2tired</p>
+                        </a>
+                    </div>
+
+                    <div>
+                        <a href="https://www.youtube.com/@yolkieebaby">
+                            <img src="./assets/pfps/yolkiee.jpg">
+                            <p>Yolkiee</p>
+                        </a>
+                    </div>
+
+                    <div>
+                        <a href="https://www.youtube.com/@lunar_novaa">
+                            <img src="./assets/pfps/lunar.jpeg">
+                            <p>Lunar_Novaa</p>
+                        </a>
+                    </div>
 
                 </div>
-            </section>
-
-            <section class="portfolio-section">
-                <h3>Photo</h3>
-                <div class="gallery">
-                    <div>
-                        <img src="./assets/elk.jpg" alt="Photo 1">
-                    </div>
-                    <div >
-                        <img src="./assets/pride.jpg" alt="Photo 1">
-                    </div>
-                    <div>
-                        <img src="./assets/wasabi1.jpg" alt="Photo 1">
-                    </div>
-                    <div>
-                        <img src="./assets/wasabi2.jpg" alt="Photo 1">
-                    </div>
-                    <div>
-                        <img src="./assets/wasabi3.jpg" alt="Photo 1">
-                    </div>
-                    <div>
-                        <img src="./assets/wasabi4.jpg" alt="Photo 1">
-                    </div>
-                </div>
-            </section>
-
-            <section class="portfolio-section">
-                <h3>Publications</h3>
-                <ul>
-                    <li>Kychenthal, Skye. “Why the Trans Programmer?” 2022 IEEE Integrated STEM Education Conference (ISEC), March 26, 2022, 117–22. https://doi.org/10.1109/isec54952.2022.10025288. </li>
-                </ul>
-            </section>
-            <section class="portfolio-section">
-
-                <h3>Bylines</h3>
-                <ul>
-                    <li>Kychenthal, Skye. "A Deep Dive into Reed’s Freshman Retention Woes." Quest, October 27, 2022.</li>
-                </ul>
-
             </section>
 
             <!-- <section class="portfolio-section">
-
-                <h3>Projects</h3>
-                <ul>
-                    <li>Kychenthal, Skye. "A Deep Dive into Reed’s Freshman Retention Woes." Quest, October 27, 2022.</li>
-                </ul>
-                
+                <h3>Who Have I Worked With?</h3>
+                <div class="gallery_photo">
+                    <div>
+                        <img src="./assets/images/elk.jpg" alt="Photo 1">
+                    </div>
+                    <div>
+                        <img src="./assets/images/pride.jpg" alt="Photo 1">
+                    </div>
+                </div>
+                <div class="gallery_photo">
+                    <div>
+                        <img src="./assets/images/wasabi1.jpg" alt="Photo 1">
+                    </div>
+                    <div>
+                        <img src="./assets/images/wasabi2.jpg" alt="Photo 1">
+                    </div>
+                    <div>
+                        <img src="./assets/images/wasabi3.jpg" alt="Photo 1">
+                    </div>
+                </div>
             </section> -->
 
             <br>
