--- a/index.html
+++ b/index.html
@@ -5,20 +5,20 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>SkyeActsOut</title>
-  <!-- <link rel="icon" type="image/x-icon" href="/assets/Joshie-Comm-CROP-ICO.png"> -->
+  <link rel="icon" type="image/x-icon" href="/assets/paw_icns.png">
   <meta name="description"
-    content="SkyeActsOut, also known as Skye Kychenthal, is fandom video essayist focusing on radicalization and empowerment.">
+    content="SkyeActsOut YouTube, TikTok, Twitch, & Discord.">
   <meta name="author" content="SkyeActsOut">
-  <meta name="tags" content="skyeactsouts, Skye Kychenthal">
+  <meta name="tags" content="SkyeActsOut, Skye Kychenthal">
   <link rel="stylesheet" href="style.css">
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10"></script>
 
-  <meta property="og:title" content="SkyeActsOut Links" />
-  <meta property="og:description" content="YouTube, TikTok, Twitch, & Discord for the creator SkyeActsOut." />
-  <meta property="og:color" content="#F5A9B8" />
-  <meta property="og:image" content="/assets/Joshie-Comm-CROP.jpg" />
+  <meta property="og:title" content="SkyeActsOut" />
+  <meta property="og:description" content="SkyeActsOut YouTube, TikTok, Twitch, & Discord." />
+  <meta property="og:color" content="#414bd8" />
+  <!-- <meta property="og:image" content="/assets/Joshie-Comm-CROP.jpg" /> -->
 
 </head>
 
