--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Skye Kychenthal</title>
-    <!-- <link rel="icon" type="image/x-icon" href="/assets/Joshie-Comm-CROP-ICO.png"> -->
+    <link rel="icon" type="image/x-icon" href="/assets/paw_icns.png">
     <meta name="description" content="Skye Kychenthal's portfolio of work for clients such as @nominal.naomi, @nyannie, & @bubblepinkelle as well as her own.">
 
     <link rel="stylesheet" href="./style.css">
 
     <meta property="og:title" content="Skye Kychenthal" />
     <meta property="og:description" content="Skye Kychenthal's portfolio of work for clients such as @nominal.naomi, @nyannie, & @bubblepinkelle as well as her own." />
-    <meta property="og:color" content="#F5A9B8" />
-    <meta property="og:image" content="./assets/pfps/skye.jpg" />
+    <meta property="og:color" content="#414bd8" />
+    <!-- <meta property="og:image" content="/assets/paw_icns" /> -->
 
 </head>
 <body>
@@ -20,7 +20,7 @@
         <section class="topbar">
             <img src="./assets//pfps/skye.jpg" alt="Header Image" class="header-image">
             <h1>Skye Kychenthal</h1>
-            <p>contact@skyeactsout.com</p>
+            <p>Video Editor, Content Creator, Photographer, Programmer</p>
             <div class="socials">
 
                 <p><a href="/">socials</a></p>
@@ -34,7 +34,7 @@
         <hr>
 
         <main class="portfolio">
-            <section class="portfolio-section video">
+            <section class="portfolio-section">
                 <h3>Who Have I Worked With?</h3>
                 <div class="gallery">
 
@@ -105,6 +105,11 @@
                     </div>
                 </div>
             </section> -->
+
+            <hr>
+            <footer> 
+                <p>contact@skyeactsout.com</p>
+            </footer>
 
             <br>
         </main>
